# RayTracingInAWeekend

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  RTIAW  cmake_install.cmake  image3.ppm
source/: AshikhminShirley.h  camera.h  camera.h~  dielectric.h  diffuselight.h  hitable.h  hitable_list.h  lambertian.h  main.cpp  material.h  matrix4x4.h  metal.h  microfacet.h  onb.h  phong.h  quad.h  ray.h  rects.h  reflection.cpp  reflection.h  sphere.h  stb_image_write.h  student.cpp~  transform.cpp  transform.h  vec3.h  waltermicrofacet.h
